// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepNavigation: Component should render correctly 1`] = `
<NavigationContainer
  right={false}
>
  <BackButton
    disabled={false}
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="{cancel, select, true {Cancel} other {Back}}"
      id="shared.components.stepNavigation.back"
      values={
        Object {
          "cancel": true,
        }
      }
    />
  </BackButton>
  <NextButton
    disabled={false}
    loading={false}
    onClick={[Function]}
  />
  <styled.div>
    <Component
      activeStep={1}
      customStyles={
        Object {
          "margin": "0 auto",
          "pointerEvents": "none",
        }
      }
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</NavigationContainer>
`;

exports[`StepNavigation: Component should render with next step 1`] = `
<NavigationContainer
  right={false}
>
  <BackButton
    disabled={false}
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="{cancel, select, true {Cancel} other {Back}}"
      id="shared.components.stepNavigation.back"
      values={
        Object {
          "cancel": false,
        }
      }
    />
  </BackButton>
  <NextButton
    disabled={false}
    loading={false}
    onClick={[Function]}
  />
  <styled.div>
    <Component
      activeStep={4}
      customStyles={
        Object {
          "margin": "0 auto",
          "pointerEvents": "none",
        }
      }
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</NavigationContainer>
`;

exports[`StepNavigation: Component should show loading 1`] = `
<NavigationContainer
  right={false}
>
  <BackButton
    disabled={true}
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="{cancel, select, true {Cancel} other {Back}}"
      id="shared.components.stepNavigation.back"
      values={
        Object {
          "cancel": false,
        }
      }
    />
  </BackButton>
  <NextButton
    disabled={true}
    loading={true}
    onClick={[Function]}
  />
  <styled.div>
    <Component
      activeStep={4}
      customStyles={
        Object {
          "margin": "0 auto",
          "pointerEvents": "none",
        }
      }
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</NavigationContainer>
`;
